[package]
name = "examples"
version = "0.0.0"
edition = "2024"

[dev-dependencies]
fib = { path = "../fib" }
fib-macros = { path = "../fib-macros" }


[[example]]
name = "basic-use"
path = "basic-use.rs"

[[example]]
name = "reborrow"
path = "reborrow.rs"

[[example]]
name = "channel"
path = "channel.rs"

[[example]]
name = "oneshot"
path = "oneshot.rs"

[[example]]
name = "notify"
path = "notify.rs"